--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '~/assets/styles/tailwind.css';
+import '~/assets/styles/global.css';
 
 import { I18N } from 'astrowind:config';
 
@@ -39,10 +40,6 @@ const { language, textDirection } = I18N;
     <Metadata {...metadata} />
     <SiteVerification />
     <Analytics />
-    <link
-      rel="stylesheet"
-      href="/src/assets/styles/global.css"
-    />
 
     <!-- Comment the line below to disable View Transitions -->
     <ClientRouter fallback="swap" />
