--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -15,6 +15,7 @@ interface Link {
   icon?: string;
   sectionId?: string; // Added for section tracking
   isHome?: boolean; // Added to identify home link
+  previousSectionId?: string; // Added for scroll to animation
 }
 
 interface MenuLink extends Link {
@@ -77,7 +78,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
         class="flex flex-col mt-3 lg:flex-row lg:self-center w-full lg:w-auto text-xl lg:text-[0.9375rem] tracking-[0.01rem] font-medium lg:justify-center"
       >
         {
-          links.map(({ text, href, links, sectionId, isHome }) => (
+          links.map(({ text, href, links, sectionId, isHome, previousSectionId }) => (
             <li class={links?.length ? 'dropdown' : ''}>
               {links?.length ? (
                 <>
@@ -103,6 +104,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
                           data-section-id={sectionId2 || ''}
                           data-is-home={isHome2 ? 'true' : 'false'}
                           data-full-href={href2}
+                          data-prev-section-id={previousSectionId}
                         >
                           {text2}
                         </a>
@@ -120,6 +122,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
                   data-section-id={sectionId || ''}
                   data-is-home={isHome ? 'true' : 'false'}
                   data-full-href={href}
+                  data-previous-section-id={previousSectionId}
                 >
                   {text}
                 </a>
@@ -155,6 +158,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
                 class="font-serif uppercase font-normal px-2 py-3 xl:px-4"
                 type="anchor"
                 variant="link"
+                data-astro-prefetch
               />
             ))
         }
@@ -165,21 +169,16 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
   <script>
     // Improved navigation functionality to handle view transitions
     function setupNavigationHighlighting() {
-      console.log('1. setupNavigationHighlighting Function called');
       const sections = document.querySelectorAll('section[id]');
       const navLinks = document.querySelectorAll('header a');
       const currentPath = window.location.pathname;
-      console.log('setup triggered, current page', currentPath);
       const isHomePage = currentPath === '/' || currentPath === '';
-      console.log('2. Home Page Fu Check', isHomePage);
 
       // Active class to use when a section is in viewport
       const ACTIVE_CLASS = 'text-primary transition-colors duration-300 ease-in-out';
 
       // Reset all links first
       function resetAllLinks() {
-        console.log('3. ResetallLinks');
-
         navLinks.forEach((link) => {
           link.classList.remove(...ACTIVE_CLASS.split(' '));
         });
@@ -206,7 +205,6 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
           }
         });
       }
-      console.log('rando check. Home Page Check', isHomePage);
 
       // Special handling for top of page - activate home link when at the top
       // Replace the handleScrollTop function with this version
@@ -216,14 +214,11 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
         const isCurrentlyHomePage = currentPagePath === '/' || currentPagePath === '';
 
         if (isCurrentlyHomePage && window.scrollY < 50) {
-          console.log('4. handleScrollTop Called - is home page:', isCurrentlyHomePage);
-
           resetAllLinks();
 
           // Add active class to home link
           const homeLink = document.querySelector('#main-navigation a[data-is-home="true"]');
           if (homeLink) {
-            console.log('5. add active class to home link', isCurrentlyHomePage, homeLink);
             homeLink.classList.add(...ACTIVE_CLASS.split(' '));
           }
         }
@@ -268,15 +263,17 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
           link.addEventListener('click', (e) => {
             const isHome = link.getAttribute('data-is-home') === 'true';
             const sectionId = link.getAttribute('data-section-id');
+            const previousSectionId = link.getAttribute('data-previous-section-id');
             const currentPagePath = window.location.pathname;
             const isCurrentlyHomePage = currentPagePath === '/' || currentPagePath === '';
 
+            console.log(previousSectionId);
             // Only handle section scrolling when on home page
-            if (isCurrentlyHomePage && sectionId && sectionId !== '') {
+            if (isCurrentlyHomePage && previousSectionId && previousSectionId !== '') {
               e.preventDefault();
-              const section = document.getElementById(sectionId);
-              if (section) {
-                section.scrollIntoView({ behavior: 'smooth' });
+              const previousSection = document.getElementById(previousSectionId);
+              if (previousSection) {
+                previousSection.scrollIntoView({ behavior: 'smooth', block: 'end' });
               }
             }
             // Handle home link on home page
