add required attribute to form

--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -29,7 +29,8 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
                 id={name}
                 autocomplete={autocomplete}
                 placeholder={placeholder}
-                class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200  bg-white "
+                class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200  bg-white"
+                required
               />
             </div>
           )
