--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -49,7 +49,7 @@ const { socialLinks = [], links = [], footNote = '' } = Astro.props;
         <div class="flex flex-col gap-6">
           <!-- Google Maps -->
           <div class="w-full h-fit rounded mb-6">
-            <GoogleMaps />
+            <!-- <GoogleMaps /> -->
           </div>
 
           <!-- Info Sections -->
@@ -77,8 +77,7 @@ const { socialLinks = [], links = [], footNote = '' } = Astro.props;
             <div>
               <h3 class="font-bold mb-2 font-serif">Address</h3>
               <p class="text-sm">
-                651 Dupont St<br />
-                Toronto, Ontario M6G 1Z4
+                Private Home Studio <br /> near Green Lane & Leslie in Newmarket, ON.
                 <br />
               </p>
             </div>
@@ -86,7 +85,7 @@ const { socialLinks = [], links = [], footNote = '' } = Astro.props;
         </div>
 
         <!-- Column 2 - Directions -->
-        <div>
+        <!-- <div>
           <h3 class="text-lg font-bold mb-4 md:text-xl font-serif">Directions</h3>
           <p class="text-md font-bold text-primary">Bloor-Danforth Subway Line</p>
           <ul class="mb-2 font-sans">
@@ -127,7 +126,7 @@ const { socialLinks = [], links = [], footNote = '' } = Astro.props;
               of our salon
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
 
       <!-- Social Links and Footer Note -->
