update header bg color on scroll to match page-bg

--- a/src/components/widgets/Hero2.astro
+++ b/src/components/widgets/Hero2.astro
@@ -89,7 +89,7 @@ const {
       /* 116px - 164px top */
       /* 60px - 100px  bottom */
       /* padding: clamp(7.25rem, 16.82vw, 10.25rem) 1rem clamp(3.75rem, 7.82vw, 6.25rem); */
-      background-color: #fafafa;
+      background-color: var(--aw-color-bg-page);
       /* clips the svg wave from overflowing */
       overflow: hidden;
       position: relative;
