--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -29,14 +29,14 @@ import '@fontsource-variable/playfair-display';
     --aw-font-serif: 'Montserrat Variable';
     --aw-font-heading: 'Playfair Display Variable';
 
-    --aw-color-primary: #c78864;
+    --aw-color-primary: #5c6d5d;
     --aw-color-secondary: rgb(0, 0, 0);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-accent: #c66e4e;
 
     --aw-color-text-heading: rgb(0 0 0);
     --aw-color-text-default: rgb(16 16 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: #fafafa;
+    --aw-color-bg-page: #f5efe8;
 
     --aw-color-bg-page-dark: rgb(3 6 32);
 
