update google embed with matching location description

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -35,8 +35,8 @@ const metadata = {
             class="absolute translate-y-1/2 mx-auto z-10 w-[80%] h-fit bg-white rounded-xl shadow-md p-5 gap-5"
             style="view-transition-name: map-info;"
           >
-            <p class="text-primary font-serif text-lg font-semibold">Address</p>
-            <p class="text-muted font-sm">651 Dupont St Toronto, Ontario M6G 1Z4</p>
+            <p class="text-primary font-serif text-lg font-semibold">Private Studio Location</p>
+            <p class="text-muted font-sm">Full address provided in confirmation email.</p>
           </div>
         </div>
         <div class="flex flex-col lg:gap-10">
