--- a/src/components/widgets/GoogleMaps.astro
+++ b/src/components/widgets/GoogleMaps.astro
@@ -7,7 +7,7 @@ const { width = '600', height = '450' } = Astro.props;
   data-maps-loaded="false"
 >
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.8750144049645!2d-79.42368832305323!3d43.67156915124149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3488a1e6be51%3A0x6adae750771e61ae!2sLisa%20Dinh%20Hair%20Studio!5e0!3m2!1sen!2sca!4v1744613878105!5m2!1sen!2sca"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11464.060847778914!2d-79.4547479423172!3d44.083040141406535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882acda3540b661d%3A0xc7ecfb27d62deb31!2sLeslie%20St%20%2F%20Green%20Lane!5e0!3m2!1sen!2s!4v1750493346366!5m2!1sen!2s"
     width={width}
     height={height}
     style="border:0;"
@@ -17,6 +17,17 @@ const { width = '600', height = '450' } = Astro.props;
     class="w-full transition-opacity duration-500 opacity-0"
     onload="this.classList.add('opacity-100'); this.parentElement.dataset.mapsLoaded = 'true';"
   ></iframe>
+  <!-- <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.8750144049645!2d-79.42368832305323!3d43.67156915124149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3488a1e6be51%3A0x6adae750771e61ae!2sLisa%20Dinh%20Hair%20Studio!5e0!3m2!1sen!2sca!4v1744613878105!5m2!1sen!2sca"
+    width={width}
+    height={height}
+    style="border:0;"
+    allowfullscreen=""
+    loading="eager"
+    referrerpolicy="no-referrer-when-downgrade"
+    class="w-full transition-opacity duration-500 opacity-0"
+    onload="this.classList.add('opacity-100'); this.parentElement.dataset.mapsLoaded = 'true';"
+  ></iframe> -->
 </div>
 
 <script>
