update contact shadows and backgrounds for google maps

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,6 +4,7 @@ import Layout from '~/layouts/PageLayout.astro';
 import ContactUs from '~/components/widgets/Contact.astro';
 import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
 import GoogleMaps from '~/components/widgets/GoogleMaps.astro';
+import { Icon } from 'astro-icon/components';
 
 const metadata = {
   title: 'Contact',
@@ -28,20 +29,26 @@ const metadata = {
           class="hidden rounded-xl w-full h-fit relative lg:flex flex-col items-center justify-end"
           style="view-transition-name: map-section;"
         >
-          <div class="rounded-xl w-full h-fit overflow-hidden shadow-sm">
+          <div class="rounded-xl w-full h-fit overflow-hidden drop-shadow-sm">
             <GoogleMaps />
           </div>
           <div
-            class="absolute translate-y-1/2 mx-auto z-10 w-[80%] h-fit bg-white rounded-xl shadow-md p-5 gap-5"
+            class="absolute translate-y-1/2 mx-auto z-10 w-[80%] h-fit bg-white/80 backdrop-blur-md rounded-xl drop-shadow-sm p-5 gap-2 flex"
             style="view-transition-name: map-info;"
           >
-            <p class="text-primary font-serif text-lg font-semibold">Private Studio Location</p>
-            <p class="text-muted font-sm">Full address provided in confirmation email.</p>
+            <Icon
+              name="material-symbols-light:location-on-rounded"
+              class="w-8 h-8 text-primary translate-y-1"
+            />
+            <div class="flex-col gap-2">
+              <p class="text-primary font-serif text-lg font-semibold">Private Studio Location</p>
+              <p class="text-muted font-sm">Full address provided in confirmation email.</p>
+            </div>
           </div>
         </div>
         <div class="flex flex-col lg:gap-10">
           <div class="description flex flex-col gap-2 mt-5">
-            <h3 class="text-primary text-5xl font-serif font-bold lg:mb-3 lg:text-3xl">Contact</h3>
+            <h3 class="text-primary text-6xl font-serif font-bold lg:mb-3 lg:text-3xl">Contact</h3>
             <p class="text-muted">Please use the general contact form to submit your inquiries.</p>
             <p class="text-muted">
               For new clients, please fill out the New Client Form to submit your hair information prior to your
