add dark bg color variable

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -31,14 +31,14 @@ import '@fontsource-variable/playfair-display';
 
     --aw-color-primary: #5c6d5d;
     --aw-color-secondary: rgb(0, 0, 0);
-    --aw-color-accent: #c66e4e;
+    --aw-color-accent: #a68a64;
 
     --aw-color-text-heading: rgb(0 0 0);
     --aw-color-text-default: rgb(16 16 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
     --aw-color-bg-page: #f5efe8;
 
-    --aw-color-bg-page-dark: rgb(3 6 32);
+    --aw-color-bg-page-dark: #3a3a3a;
 
     ::selection {
       background-color: lavender;
