--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -29,11 +29,11 @@ const metadata = {
           class="hidden rounded-xl w-full h-fit relative lg:flex flex-col items-center justify-end"
           style="view-transition-name: map-section;"
         >
-          <div class="rounded-xl w-full h-fit overflow-hidden drop-shadow-sm">
+          <div class="rounded-xl w-full h-fit overflow-hidden drop-shadow-sm brightness-90">
             <GoogleMaps />
           </div>
           <div
-            class="absolute translate-y-1/2 mx-auto z-10 w-[80%] h-fit bg-white/80 backdrop-blur-md rounded-xl drop-shadow-sm p-5 gap-2 flex"
+            class="absolute translate-y-1/2 mx-auto z-10 w-[80%] h-fit bg-white/70 backdrop-blur-md rounded-xl drop-shadow-sm p-5 gap-2 flex"
             style="view-transition-name: map-info;"
           >
             <Icon
