--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -36,8 +36,7 @@ import '@fontsource-variable/playfair-display';
     --aw-color-text-heading: rgb(0 0 0);
     --aw-color-text-default: rgb(16 16 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: #f5efe8;
-
+    --aw-color-bg-page: #fafafa;
     --aw-color-bg-page-dark: #3a3a3a;
 
     ::selection {
