--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const metadata = {
         <Button
           variant="primary"
           text="Schedule an Appointment"
-          href="https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so"
+          href="https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078"
           target="_blank"
           type="anchor"
         />
@@ -69,7 +69,7 @@ const metadata = {
         price: 'from $400+',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
+          href: 'https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078',
           target: '_blank',
         },
       },
@@ -80,7 +80,7 @@ const metadata = {
         price: 'starting from $120',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
+          href: 'https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078',
           target: '_blank',
         },
       },
@@ -91,7 +91,7 @@ const metadata = {
         price: '$100',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
+          href: 'https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078',
           target: '_blank',
         },
       },
@@ -102,7 +102,7 @@ const metadata = {
         price: 'starting from $300',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
+          href: 'https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078',
           target: '_blank',
         },
       },
@@ -114,7 +114,7 @@ const metadata = {
         price: 'Price upon consultation',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
+          href: 'https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078',
           target: '_blank',
         },
       },
@@ -125,7 +125,7 @@ const metadata = {
         price: 'Add-on $50+',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
+          href: 'https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078',
           target: '_blank',
         },
       },
@@ -136,7 +136,7 @@ const metadata = {
         <Button
           variant="primary"
           text="Schedule an Appointment"
-          href="https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so"
+          href="https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078"
           target="_blank"
           type="anchor"
         />
@@ -195,7 +195,7 @@ const metadata = {
         <Button
           variant="primary"
           text="Schedule an Appointment"
-          href="https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so"
+          href="https://www.fresha.com/book-now/beanbeauty-mti2rkmw/all-offer?share&pId=386078"
           target="_blank"
           type="anchor"
         />
