--- a/src/components/ui/ConsultationForm.astro
+++ b/src/components/ui/ConsultationForm.astro
@@ -85,7 +85,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
             data-step={index + 1}
           >
             <div
-              class={`step-number flex items-center justify-center rounded-full w-8 h-8 bg-gray-200text-gray-800  ${index === 0 ? 'bg-primary-600 text-white' : ''}`}
+              class={`step-number flex items-center justify-center rounded-full w-8 h-8 text-gray-800  ${index === 0 ? 'bg-gray-100' : 'bg-gray-300'}`}
             >
               {index + 1}
             </div>
@@ -94,7 +94,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
         ))
       }
     </div>
-    <div class="step-progress-bar h-1 mt-4 bg-gray-200 rounded-full">
+    <div class="step-progress-bar h-1 mt-4 bg-gray-300 rounded-full">
       <div class="step-progress-bar-fill h-full w-0 bg-primary-600 rounded-full transition-all duration-300"></div>
     </div>
   </div>
@@ -123,7 +123,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                 {label && (
                   <label
                     for={`${name}-${stepIndex}`}
-                    class="block text-sm font-medium text-gray-700  mb-1"
+                    class="block text-sm font-medium text-gray-700  mb-2"
                   >
                     {label} {required && <span class="text-red-600">*</span>}
                   </label>
@@ -218,7 +218,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
               Next
             </Button>
           ) : (
-            <div class="ml-auto">
+            <div class="w-full ml-auto">
               {disclaimer && (
                 <div class="mb-6 flex items-start">
                   <div class="flex mt-0.5">
@@ -240,7 +240,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                   </div>
                 </div>
               )}
-              <div class="flex justify-between mt-6">
+              <div class="w-full flex justify-between mt-6">
                 <Button
                   type="button"
                   variant="secondary"
@@ -309,9 +309,9 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
     const stepIndicatorItems = form.querySelectorAll('.step-indicator-item > .step-number');
     stepIndicatorItems.forEach((indicator, index) => {
       if (index === 0) {
-        indicator.classList.add('bg-gray-100', 'text-white');
+        indicator.classList.add('bg-gray-100');
       } else {
-        indicator.classList.add('bg-gray-200');
+        indicator.classList.add('bg-gray-300');
       }
     });
 
@@ -398,11 +398,11 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
         stepIndicators.forEach((indicator, index) => {
           if (index == currentStepNum) {
             console.log('current step num: ', currentStepNum);
-            indicator.classList.add('bg-gray-100', 'text-white');
-            indicator.classList.remove('bg-gray-200');
+            indicator.classList.add('bg-gray-100');
+            indicator.classList.remove('bg-gray-300');
           } else {
-            indicator.classList.remove('bg-gray-100', 'text-white');
-            indicator.classList.add('bg-gray-200');
+            indicator.classList.remove('bg-gray-100');
+            indicator.classList.add('bg-gray-300');
           }
         });
       });
@@ -427,8 +427,8 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
         // Update step indicators
         stepIndicators.forEach((indicator, index) => {
           if (index >= prevStepNum) {
-            indicator.classList.remove('bg-primary-600', 'text-white');
-            indicator.classList.add('bg-gray-200');
+            indicator.classList.remove('bg-primary-600');
+            indicator.classList.add('bg-gray-300');
           }
         });
       });
