--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -188,6 +188,11 @@ const metadata = {
         description:
           "Yes! <b>Nourishing treatments are offered such as deep conditioning, Olaplex treatments, and scalp massages</b> to keep your hair healthy and strong. If you're interested, please ask during your appointment, and I'll guide you on which treatment is best for your hair needs.",
       },
+      {
+        title: 'What is the $2 eco fee?',
+        description:
+          "We're proud to partner with <a href=`https://greencirclesalons.com/` target=_blank>Green Circle Salons</a> — making sure your beauty service supports the planet. From foils and color tubes to leftover dye, every bit is recycled and transformed into clean energy or new materials, like metal for bikes. 🌱 <br><br> This $2 eco fee per visit makes it possible for us to do better for the planet — one small change for us, one beautiful step toward a more sustainable future. Thank you for supporting conscious beauty!",
+      },
     ]}
   >
     <Fragment slot="action">
