--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -28,139 +28,81 @@ export interface Props {
 const { socialLinks = [], links = [], footNote = '' } = Astro.props;
 ---
 
-<footer class:list={['relative border-t border-gray-200 not-prose']}>
+<footer class:list={['relative border-t border-gray-200 not-prose bg-[var(--aw-color-primary)]']}>
   <div
     class="absolute inset-0 pointer-events-none"
     aria-hidden="true"
   >
   </div>
-  <div
-    class="relative max-w-7xl mx-auto px-4 sm:px-6 backdrop:intersect-once intersect-quarter intercept-no-queue motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
-  >
+  <div class="relative max-w-7xl mx-auto px-4 sm:px-6">
     <div class="pt-8 md:pt-12">
-      <!-- Logo at top by itself -->
-      <div class="mb-8">
-        <Logo />
-      </div>
-
       <!-- Two column layout -->
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8 pb-4 md:pb-10">
-        <!-- Column 1 - Google Maps + Additional Info -->
-        <div class="flex flex-col gap-6">
-          <!-- Google Maps -->
-          <div class="w-full h-fit rounded mb-6">
-            <!-- <GoogleMaps /> -->
-          </div>
-
-          <!-- Info Sections -->
-          <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-            <!-- Opening Hours -->
-            <div>
-              <h3 class="font-bold mb-2 font-serif">Opening Hours</h3>
-              <ul class="text-sm">
-                <!-- <li class="mb-1">Monday - Friday: 9AM - 6PM</li> -->
-                <li class="mb-1">Saturday: 10AM - 4PM</li>
-                <!-- <li class="mb-1">Sunday: Closed</li> -->
-              </ul>
-            </div>
-
-            <!-- Contact Info -->
-            <div>
-              <h3 class="font-bold mb-2 font-serif">Contact Info</h3>
-              <ul class="text-sm">
-                <!-- <li class="mb-1">Phone: (555) 123-4567</li> -->
-                <li class="mb-1"><a href="mailto:beigebykat@gmail.com">beigebykat@gmail.com</a></li>
-              </ul>
-            </div>
-
-            <!-- Address -->
-            <div>
-              <h3 class="font-bold mb-2 font-serif">Address</h3>
-              <p class="text-sm">
-                Private Home Studio <br /> near Green Lane & Leslie in Newmarket, ON.
-                <br />
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Column 2 - Directions -->
-        <!-- <div>
-          <h3 class="text-lg font-bold mb-4 md:text-xl font-serif">Directions</h3>
-          <p class="text-md font-bold text-primary">Bloor-Danforth Subway Line</p>
-          <ul class="mb-2 font-sans">
-            <li class="text-sm text-muted">1) Take the subway to Christie Station</li>
-            <li class="text-sm text-muted">
-              2) Walk north on Christie Street toward Crestfallen Lane (850m - 10 minute walk)
-            </li>
-            <li class="text-sm text-muted">3) Turn right on Dupont Street before you cross the light</li>
-            <li class="text-sm text-muted">
-              4) Walk past Stubbe Chocolates & Pastry and Lisa Dinh Hair Studio will be the next building! (28m - 1
-              minute walk)
-            </li>
-          </ul>
-          <p class="text-md font-bold text-primary">Yonge-University-Spadina Subway Line</p>
-          <ul class="mb-2">
-            <li class="text-sm text-muted">1) Take the subway to Dupont Station</li>
-            <li class="text-sm text-muted">
-              2) Walk west on Dupont Street toward Walmer Road (1,100m - 13 minute walk)
-            </li>
-            <li class="text-sm text-muted">3) The salon will be located on the south side of Dupont St.</li>
-            <li class="text-sm text-muted">
-              4) Walk past Roberts Art Gallery and Lisa Dinh Hair Studio will be the next building!
-            </li>
-          </ul>
-          <p class="text-md font-bold text-primary">Driving</p>
-          <ul class="mb-2">
-            <li class="text-sm text-muted">
-              1) We're located right at the intersection of Dupont Street and Christie Street, on the south-east side
-            </li>
-            <li class="text-sm text-muted">
-              2) Lisa Dinh Hair Studio is across from Loblaws and beside Stubbe Chocolates & Pastry.
-            </li>
-            <li class="text-sm text-muted">
-              3) There is metered street parking on Dupont Street ($2.00 per hour for a maximum of 3 hours between
-              9:00am to 4:00pm on Mon - Fri and 8:00am - 6:00pm on Sat) and Christie Street ($2.00 per hour for a
-              maximum of 3 hours between 8:00am to 9:00pm on Mon - Sat). There is also free parking across the street at
-              Loblaws (make sure you buy something!). The entrance to the Loblaws parking lot is on Dupont Street, east
-              of our salon
-            </li>
-          </ul>
-        </div> -->
-      </div>
-
-      <!-- Social Links and Footer Note -->
-      <div class="md:flex md:items-center md:justify-between py-6 md:py-8 border-t border-gray-200 mt-8">
-        {
-          socialLinks?.length ? (
-            <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
-              {socialLinks.map(({ ariaLabel, href, text, icon, target }) => (
-                <li>
-                  <a
-                    class="text-muted  hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200  rounded-lg text-sm p-2.5 inline-flex items-center"
-                    aria-label={ariaLabel}
-                    href={href}
-                    target={target}
-                  >
-                    {icon && (
-                      <Icon
-                        name={icon}
-                        class="w-5 h-5"
-                      />
-                    )}
-                    <Fragment set:html={text} />
-                  </a>
-                </li>
-              ))}
+        <Logo />
+        <!-- Info Sections -->
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+          <!-- Opening Hours -->
+          <div>
+            <h3 class="font-bold mb-2 font-serif text-white">Opening Hours</h3>
+            <ul class="text-sm">
+              <!-- <li class="mb-1">Monday - Friday: 9AM - 6PM</li> -->
+              <li class="mb-1 text-white/80">Saturday: 10AM - 4PM</li>
+              <!-- <li class="mb-1">Sunday: Closed</li> -->
             </ul>
-          ) : (
-            ''
-          )
-        }
+          </div>
 
-        <div class="text-xs mr-4 text-muted">
-          <Fragment set:html={footNote} />
+          <!-- Contact Info -->
+          <div>
+            <h3 class="font-bold mb-2 font-serif text-white">Contact Info</h3>
+            <ul class="text-sm text-white/80">
+              <!-- <li class="mb-1">Phone: (555) 123-4567</li> -->
+              <li class="mb-1"><a href="mailto:beigebykat@gmail.com">beigebykat@gmail.com</a></li>
+            </ul>
+          </div>
+
+          <!-- Address -->
+          <div>
+            <h3 class="font-bold mb-2 font-serif text-white">Address</h3>
+            <p class="text-sm text-white/80">
+              Private Home Studio <br /> near Green Lane & Leslie in Newmarket, ON.
+              <br />
+            </p>
+          </div>
         </div>
+      </div>
+    </div>
+
+    <!-- Social Links and Footer Note -->
+    <div class="md:flex md:items-center md:justify-between py-6 md:py-8 border-t border-gray-200 mt-8">
+      {
+        socialLinks?.length ? (
+          <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
+            {socialLinks.map(({ ariaLabel, href, text, icon, target }) => (
+              <li>
+                <a
+                  class="text-white/80  hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200  rounded-lg text-sm p-2.5 inline-flex items-center"
+                  aria-label={ariaLabel}
+                  href={href}
+                  target={target}
+                >
+                  {icon && (
+                    <Icon
+                      name={icon}
+                      class="w-5 h-5"
+                    />
+                  )}
+                  <Fragment set:html={text} />
+                </a>
+              </li>
+            ))}
+          </ul>
+        ) : (
+          ''
+        )
+      }
+
+      <div class="text-xs mr-4 text-white/80">
+        <Fragment set:html={footNote} />
       </div>
     </div>
   </div>
