--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -80,7 +80,7 @@ const { socialLinks = [], links = [], footNote = '' } = Astro.props;
             {socialLinks.map(({ ariaLabel, href, text, icon, target }) => (
               <li>
                 <a
-                  class="text-white/80  hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200  rounded-lg text-sm p-2.5 inline-flex items-center"
+                  class="text-white/80  hover:text-[var(--aw-color-accent)] focus:outline-none focus:ring-4 focus:ring-gray-200  rounded-lg text-sm p-2.5 inline-flex items-center"
                   aria-label={ariaLabel}
                   href={href}
                   target={target}
