increase google maps embed brightness

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -29,7 +29,7 @@ const metadata = {
           class="hidden rounded-xl w-full h-fit relative lg:flex flex-col items-center justify-end"
           style="view-transition-name: map-section;"
         >
-          <div class="rounded-xl w-full h-fit overflow-hidden drop-shadow-sm brightness-90">
+          <div class="rounded-xl w-full h-fit overflow-hidden drop-shadow-sm">
             <GoogleMaps />
           </div>
           <div
