--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,6 +3,7 @@ import Image from '~/components/common/Image.astro';
 import { getHomePermalink } from '~/utils/permalinks';
 import LogoSrc from '~/assets/images/beigebykat-logo-black.svg';
 import FooterSrc from '~/assets/images/beigeybykat-logo-white.svg';
+import Test from '~/assets/images/test-0.svg';
 
 const { location = '' } = Astro.props;
 ---
@@ -23,7 +24,7 @@ const { location = '' } = Astro.props;
         />
       </div>
     ) : (
-      <div class="h-fit w-[180px] lg:min-w-[220px] xl:min-w-[320px] p-2 md:p-3">
+      <div class="h-fit w-[180px] lg:min-w-[220px] xl:min-w-[32ç0px] p-2 md:p-3">
         <Image
           src={LogoSrc}
           alt="Graphic logo for beigebykat color & creative hair studio"
