--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -26,7 +26,7 @@ const { location = '' } = Astro.props;
     ) : (
       <div class="h-fit w-[180px] lg:min-w-[220px] xl:min-w-[32ç0px] p-2 md:p-3">
         <Image
-          src={LogoSrc}
+          src={Test}
           alt="Graphic logo for beigebykat color & creative hair studio"
           class="!object-contain"
           width={300}
